--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.0
-click==8.3.1
-fastapi==0.127.0
-h11==0.16.0
-idna==3.11
-pydantic==2.12.5
-pydantic_core==2.41.5
-starlette==0.50.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-uvicorn==0.40.0
+# FastAPI and ASGI
+fastapi==0.115.6
+uvicorn[standard]==0.34.0
+starlette==0.41.3
+
+# Pydantic
+pydantic==2.10.4
+pydantic-settings==2.7.1
+
+# Async SQLAlchemy + Postgres
+sqlalchemy[asyncio]==2.0.36
+asyncpg==0.30.0
+
+# JWT validation
+python-jose[cryptography]==3.3.0
+httpx==0.28.1
+
+# ULID generation
+python-ulid==3.0.0
+
+# Type hints
+typing_extensions==4.12.2
