--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ sqlalchemy[asyncio]==2.0.36
 asyncpg==0.30.0
 
 # JWT validation
-python-jose[cryptography]==3.3.0
+PyJWT[crypto]==2.10.1
 httpx==0.28.1
 
 # ULID generation
